升级为JDK11后，有部分API过时，修复这个问题